# layerlens

./: .gitignore  AUTORESEARCH.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROGRAM.md  README.md  SUBMISSION.md  autoresearch-lessons.md  autoresearch-results.tsv  pyproject.toml  vesuvius-challenge.code-workspace
.github/workflows/: ci.yml
benchmarks/: __init__.py  compare_baselines.py  download_surface_samples.py  make_demo.py  prepare_official_crops.py  synthetic.py  validate_degradations.py  validate_surface_corpus.py  verify_metric.py  verify_persistence_evidence.py
docs/: method.md  output.md  validation.md  vc3d.md
docs/evidence/: README.md  baseline_comparison_report.json  degradation_validation_report.json  persistence_holdout_acquisition_manifest.json  persistence_holdout_claim_certificate.json  persistence_holdout_crop_manifest.json  persistence_holdout_exclusions.txt  persistence_holdout_independent_verification.json  persistence_holdout_preregistration.md  persistence_holdout_records.jsonl  persistence_holdout_report.json  persistence_holdout_selection.json  surface_validation_manifest.json  surface_validation_report.json  vc3d_cli_validation_report.json
src/layerlens/: __init__.py  cli.py  io.py  pipeline.py  quality.py  report.py  vc3d.py
tests/: test_baseline_comparison.py  test_cli.py  test_degradation_validation.py  test_demo.py  test_io.py  test_persistence_evidence.py  test_pipeline.py  test_quality.py  test_report.py  test_validation.py  test_vc3d.py
